--- a/.gitmodules
+++ b/.gitmodules
@@ -44,6 +44,9 @@
 [submodule "packed"]
 	path = lib/packed
 	url = git@github.com:emacscollective/packed.git
+[submodule "selectrum"]
+	path = lib/selectrum
+	url = git@github.com:radian-software/selectrum.git
 [submodule "solaire-mode"]
 	path = lib/solaire-mode
 	url = git@github.com:hlissner/emacs-solaire-mode.git
