Assimilate fira-code-mode
Remove ligature.el

--- a/.gitmodules
+++ b/.gitmodules
@@ -38,6 +38,9 @@
 [submodule "esup"]
 	path = lib/esup
 	url = git@github.com:jschaf/esup.git
+[submodule "fira-code-mode"]
+	path = lib/fira-code-mode
+	url = git@github.com:jming422/fira-code-mode.git
 [submodule "forge"]
 	path = lib/forge
 	url = git@github.com:magit/forge.git
@@ -53,9 +56,6 @@
 [submodule "haskell-mode"]
 	path = lib/haskell-mode
 	url = git@github.com:haskell/haskell-mode.git
-[submodule "ligature"]
-	path = lib/ligature
-	url = git@github.com:mickeynp/ligature.el.git
 [submodule "lsp-bridge"]
 	path = lib/lsp-bridge
 	url = git@github.com:manateelazycat/lsp-bridge.git
