--- a/.gitmodules
+++ b/.gitmodules
@@ -56,6 +56,9 @@
 [submodule "haskell-mode"]
 	path = lib/haskell-mode
 	url = git@github.com:haskell/haskell-mode.git
+[submodule "llvm-mode"]
+	path = lib/llvm-mode
+	url = https://github.com/nverno/llvm-mode
 [submodule "lsp-bridge"]
 	path = lib/lsp-bridge
 	url = git@github.com:manateelazycat/lsp-bridge.git
@@ -107,6 +110,9 @@
 [submodule "racket-mode"]
 	path = lib/racket-mode
 	url = git@github.com:greghendershott/racket-mode.git
+[submodule "rmsbolt"]
+	path = lib/rmsbolt
+	url = git@gitlab.com:jgkamat/rmsbolt.git
 [submodule "rust-mode"]
 	path = lib/rust-mode
 	url = git@github.com:rust-lang/rust-mode.git
