--- a/.gitmodules
+++ b/.gitmodules
@@ -26,6 +26,9 @@
 [submodule "magit"]
 	path = lib/magit
 	url = https://github.com/magit/magit
+[submodule "nix-mode"]
+	path = lib/nix-mode
+	url = https://github.com/NixOS/nix-mode
 [submodule "with-editor"]
 	path = lib/with-editor
 	url = https://github.com/magit/with-editor
