Assimilate fira-code-mode

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,6 +26,9 @@
 [submodule "esup"]
 	path = lib/esup
 	url = https://github.com/jschaf/esup
+[submodule "fira-code-mode"]
+	path = lib/fira-code-mode
+	url = https://github.com/jming422/fira-code-mode
 [submodule "macrostep"]
 	path = lib/macrostep
 	url = https://github.com/emacsorphanage/macrostep
