--- a/.gitmodules
+++ b/.gitmodules
@@ -44,6 +44,10 @@
 [submodule "no-littering"]
 	path = lib/no-littering
 	url = https://github.com/emacscollective/no-littering
+[submodule "vertico"]
+	path = lib/vertico
+	url = https://github.com/minad/vertico
+	recursive-byte-compile = true
 [submodule "with-editor"]
 	path = lib/with-editor
 	url = https://github.com/magit/with-editor
