--- a/.gitmodules
+++ b/.gitmodules
@@ -50,6 +50,9 @@
 [submodule "no-littering"]
 	path = lib/no-littering
 	url = https://github.com/emacscollective/no-littering
+[submodule "orderless"]
+	path = lib/orderless
+	url = https://github.com/oantolin/orderless
 [submodule "vertico"]
 	path = lib/vertico
 	url = https://github.com/minad/vertico
