--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 [submodule "with-editor"]
 	path = lib/with-editor
 	url = https://github.com/magit/with-editor
+[submodule "zig-mode"]
+	path = lib/zig-mode
+	url = https://github.com/ziglang/zig-mode
