Assimilate markdown-mode

--- a/.gitmodules
+++ b/.gitmodules
@@ -41,6 +41,9 @@
 [submodule "marginalia"]
 	path = lib/marginalia
 	url = https://github.com/minad/marginalia
+[submodule "markdown-mode"]
+	path = lib/markdown-mode
+	url = https://github.com/jrblevin/markdown-mode
 [submodule "mood-line"]
 	path = lib/mood-line
 	url = https://gitlab.com/jessieh/mood-line
