Orchestrate excludes file
This should mean I no longer have to touch my global excludes file

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
+[borg]
+	extra-build-step = (config/borg-add-exclude-rules borg-clone)
 [submodule "auto-compile"]
 	path = lib/auto-compile
 	url = https://github.com/emacscollective/auto-compile
