--- a/.gitmodules
+++ b/.gitmodules
@@ -40,6 +40,9 @@
 [submodule "fira-code-mode"]
 	path = lib/fira-code-mode
 	url = https://github.com/jming422/fira-code-mode
+[submodule "haskell-mode"]
+	path = lib/haskell-mode
+	url = https://github.com/haskell/haskell-mode
 [submodule "llama"]
 	path = lib/llama
 	url = git@github.com:emacsmirror/llama.git
