--- a/.gitmodules
+++ b/.gitmodules
@@ -70,6 +70,9 @@
 [submodule "vertico"]
 	path = lib/vertico
 	url = https://github.com/minad/vertico
+[submodule "visual-fill-column"]
+	path = lib/visual-fill-column
+	url = git@github.com:emacsmirror/visual-fill-column.git
 [submodule "with-editor"]
 	path = lib/with-editor
 	url = https://github.com/magit/with-editor
