--- a/.gitmodules
+++ b/.gitmodules
@@ -67,6 +67,9 @@
 [submodule "no-littering"]
 	path = lib/no-littering
 	url = https://github.com/emacscollective/no-littering
+[submodule "ox-sb"]
+	path = lib/ox-sb
+	url = git@github.com:lambdadog/ox-sb.git
 [submodule "vertico"]
 	path = lib/vertico
 	url = https://github.com/minad/vertico
