--- a/.gitmodules
+++ b/.gitmodules
@@ -43,6 +43,9 @@
 [submodule "haskell-mode"]
 	path = lib/haskell-mode
 	url = https://github.com/haskell/haskell-mode
+[submodule "ligature"]
+	path = lib/ligature
+	url = https://github.com/mickeynp/ligature.el
 [submodule "llama"]
 	path = lib/llama
 	url = git@github.com:emacsmirror/llama.git
