--- a/.gitmodules
+++ b/.gitmodules
@@ -14,7 +14,7 @@
 	url = git@github.com:emacscollective/closql.git
 [submodule "compat"]
 	path = lib/compat
-	url = https://git.sr.ht/~pkal/compat
+	url = git@github.com:emacs-compat/compat.git
 [submodule "corfu"]
 	path = lib/corfu
 	url = https://github.com/minad/corfu
